# ros2_create_qt_pkg

./: README.md  ros2_create_qt_pkg.sh  setup.sh
qt-ros/: package.xml
qt-ros/include/PACKAGE_NAME/: main_window.hpp  qnode.hpp
qt-ros/src/: main_window.cpp  qnode.cpp
